# membership

./: .env.example  README.md  alembic.ini  postman.json  pyproject.toml
alembic/: env.py
alembic/versions/: 333bdd934768_add_attendance_trigger.py  c99a187f0227_.py  c9c0b02ceb7f_initial_migration.py  d7ccdf50b71a_convert_to_sqlmodel.py
app/: main.py
app/api/: attendance.py  members.py  plans.py  subscriptions.py
app/core/: config.py  db.py
app/lib/: seed.py
app/models/: attendance.py  attendence.py  members.py  plans.py  subscriptions.py
app/schemas/: attendance.py  members.py  plans.py  subscriptions.py
app/services/: attendance.py  members.py  plans.py  subscriptions.py
